@startuml
class FallState <<partial>> {
    + <<override>> EnterState(configs:StateConfig.IBaseStateConfig[]) : void
    + <<override>> ExitState() : void
    + <<override>> ProcessState(executionStatus:StateExecutionStatus, delta:double) : StateExecutionStatus
    + <<override>> UpdateAnimation() : StateAnimationLevel
}
class "IChildState`2"<T1,T2> {
}
BasePlayerState <|-- FallState
"IChildState`2" "<PlayerController,AirParentState>" <|-- FallState
FallState --> "ParentState" AirParentState
@enduml
